src/main/java/org/example/http/errors/InvalidHttpRequestException.java
package org.example.http.errors;

public class InvalidHttpRequestException extends Exception {
    public InvalidHttpRequestException(String errorMessage) {
        super(errorMessage);
    }
}
